# somfy-open-api

./: .codeclimate.yml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  release-drafter.yml
.github/workflows/: main.yml  release.yml  testing.yml
pymfy/: __init__.py
pymfy/api/: error.py  model.py  somfy_api.py
pymfy/api/devices/: base.py  blind.py  camera_protect.py  category.py  interior_blind.py  roller_shutter.py  thermostat.py
sompy/api/: somfy_api.py
sompy/api/devices/: base.py  roller_shutter.py  types.py
src/api/: api.py  model.py  site.py  somfy_api.py
src/api/devices/: base.py  category.py  interior_blind.py  roller_shutter.py
tests/: blind.json  camera.json  get_devices_1.json  get_devices_2.json  get_devices_3.json  get_site.json  get_sites.json  hvac.json  roller_shutter.json  roller_shutter_2.json  test_blind.py  test_camera_protect.py  test_command.py  test_roller_shutter.py  test_somfy_api.py  test_somfy_device.py  test_thermostat.py
tests/data/: access_token_expired.json  definition_not_found.json  device_not_found.json  invalid_access_token.json  quota_violation.json  setup_not_found.json  site_not_found.json  validate_error.json
