[tool.poetry]
name = "pymfy"
version = "0.9.4"
description = "A Somfy Open API library"
authors = ["ETIENNE Thibaut"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/tetienne/somfy-open-api"
repository = "https://github.com/tetienne/somfy-open-api"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
requests-oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]
tox = ">=3.0"
pytest = ">=4.1"
pytest-cov = ">=2.8.1"
httpretty = ">=1.0.2"
pre-commit = ">=1.10"
flake8 = "^3.9.2"
pylint = "^2.8.2"
pyupgrade = "^2.15.0"
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
