[metadata]
name = pymfy
version = attr: pymfy.__version__
description = A Somfy Open API library
long_description = file: README.md
long_description_content_type = text/markdown
author = ETIENNE Thibaut
home-page = https://github.com/tetienne/somfy-open-api
license = GNU General Public License v3.0
project_urls =
  Somfy Developper = https://developer.somfy.com/

[options]
include_package_data = True
python_requires = >=3.4
install_requires =
  requests-oauthlib
  typing;python_version<"3.5"
packages=find:

[options.packages.find]
exclude =
    tests