[metadata]
name = pymfy
license = GNU General Public License v3.0
description = A Somfy Open API library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tetienne/somfy-open-api
author = ETIENNE Thibaut
version = attr: pymfy.__version__

[options]
python_requires = >=3.4
install_requires =
    requests-oauthlib
    typing;python_version<"3.5"
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E501

[isort]
known_third_party = httpretty,oauthlib,pytest,requests,requests_oauthlib,setuptools
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88

[mypy]
check_untyped_defs = True
disallow_untyped_defs = True
disallow_any_generics = True
warn_no_return = True
no_implicit_optional = True
ignore_missing_imports = True

[mypy-tests.*]
ignore_errors = True
